Adding robot simulation and interfacing

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,4 +1,7 @@
 
-add_subdirectory(consensus)
-add_subdirectory(formation)
+# add_subdirectory(consensus)
 add_subdirectory(display)
+add_subdirectory(interface)
+add_subdirectory(formation)
+add_subdirectory(runge_kutta)
+add_subdirectory(sim)
