--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(consensus)
 add_subdirectory(display)
 add_subdirectory(interface)
 add_subdirectory(formation)
+add_subdirectory(logging)
 add_subdirectory(runge_kutta)
 add_subdirectory(sim)
