Formation description improved

--- a/libs/formation/CMakeLists.txt
+++ b/libs/formation/CMakeLists.txt
@@ -1,5 +1,4 @@
 
-add_library(amrl_formation
-  src/RobotFormation.cpp
-  src/FormationMovement.cpp)
+add_library(formation_supervisor
+  src/FormationSupervisor.cpp)
   
