--- a/libs/interface/CMakeLists.txt
+++ b/libs/interface/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(robot_interface
   src/RobotInterface.cpp)
 target_link_libraries(robot_interface
+  formation_supervisor
+  formation_display
   ${catkin_LIBRARIES})
