--- a/libs/formation/CMakeLists.txt
+++ b/libs/formation/CMakeLists.txt
@@ -1,4 +1,11 @@
 
+add_library(formation_definitions
+  src/Formation.cpp
+  src/FormationFromFile.cpp
+  src/FormationCircle.cpp)
+
 add_library(formation_supervisor
   src/FormationSupervisor.cpp)
+target_link_libraries(formation_supervisor
+  formation_definitions)
   
